@@ -1,3 +1,12 @@
+2002-08-13  Andrew Cagney  <cagney@redhat.com>
+
+	* regcache.c (init_regcache_descr): Overallocate the
+	raw_register_valid_p array including space for NUM_PSEUDO_REGS.
+	(registers_changed): Replace NUM_REGS+NUM_PSEUDO_REGS with
+	nr_raw_registers.
+	(set_register_cached): Add range checking assertions.  Use
+	current_regcache.
+
 2002-08-13  Mark Kettenis  <kettenis@elgar.kettenis.dyndns.org>
 
 	* i386-tdep.c (i386_stab_reg_to_regnum): Return correct register
